<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/open_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <Button
                android:id="@+id/add_surface_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_surface" />

            <Button
                android:id="@+id/remove_surface_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_surface" />

            <Button
                android:id="@+id/add_sub_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_sub" />

            <Button
                android:id="@+id/remove_sub_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_sub" />

            <Button
                android:id="@+id/add_capture_callback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_capture_callback" />

            <Button
                android:id="@+id/remove_capture_callback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_capture_callback" />

            <Button
                android:id="@+id/add_preview_callback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_preview_callback" />

            <Button
                android:id="@+id/remove_preview_callback_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_preview_callback" />

            <Button
                android:id="@+id/double_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_text" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <RelativeLayout
            android:id="@+id/main_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/sub_rl"
            android:layout_width="256dp"
            android:layout_height="192dp"
            android:layout_gravity="top|end" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/format_1280_720_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_1280_720" />

            <Button
                android:id="@+id/format_640_480_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_640_480" />

            <TextView
                android:id="@+id/format_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>